# extism

./: Cargo.toml  extism.go
haskell/src/Extism/: Manifest.hs
manifest/: schema.json
manifest/src/: lib.rs
ocaml/lib/: extism.ml  extism.mli
runtime/: Cargo.toml  build.rs  extism.h
runtime/examples/: fs.rs  linking.rs  log_callback.rs  readme.rs
runtime/src/: call_context.rs  current_plugin.rs  export.rs  function.rs  lib.rs  main.rs  manifest.rs  memory.rs  pdk.rs  pipe.rs  plugin.rs  plugin_builder.rs  sdk.rs
runtime/src/tests/: mod.rs  runtime.rs
