[package]
name = "extism"
description = "Extism runtime and Rust SDK"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
extism-convert = { workspace = true }
extism-manifest = { workspace = true }
wasmtime = ">= 20.0.0, < 24.0.0"
wasmtime-wasi = ">= 20.0.0, < 24.0.0"
wiggle = ">= 20.0.0, < 24.0.0"
anyhow = "1"
serde_json = "1"
url = "2"
serde = "1"
futures = {version = "0.3"}
futures-time = "3.0.0"
reqwest = "0.12.5"
uuid = { version = "1.10.0", features = ["v4"] }
tracing = "0.1.40"
async-trait = "0.1.81"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std", "fmt"] }
tokio = { version = "1.38.0", features = ["rt", "macros", "fs"] }
glob = "0.3.1"
bytes = "1.6.0"
sha2 = "0.10.8"

[features]
default = ["http", "register-filesystem", "register-http"]
http = []
register-filesystem = []
register-http = []

[build-dependencies]
cbindgen = { version = "0.26.0", default-features = false }

[dev-dependencies]
criterion = "0.5.1"
quickcheck = "1"
rand = "0.8.5"

# [[bench]]
# name = "bench"
# harness = false

